# dana

./: .env  .gitignore  DANA_ENGINE_PLAN.md  Daneshbonyan_Eligibility_AI_Guide.md  Makefile  PHASE_1_LOCAL.md  PHASE_2_GPU.md  Project Blueprint_ Qwen3.5-400B Local Inference MVP.md  TODO.md  dana_collab (1).ipynb  dana_collab.ipynb  docker-compose.yml  gpu_rent_cost_FA.txt  meduim-oss-llm-serving-fast.md  oss-ai-middle-east-strategy.md  pyproject.toml  rewritten-help-db-reg-it-transcription.txt
.github/workflows/: ci.yml
Archive/: LOCAL_TEST_PLAN.md  NEXT_STEPS.md
Archive/docs/: dana-overview.html
Archive/engine-docs/: NEXT_STEPS.md
Archive/engine-packages/dana-engine/: pyproject.toml
Archive/engine-packages/dana-engine/src/dana_engine/: __init__.py
Archive/engine-packages/dana-engine/src/dana_engine/batch/: expert_grouper.py  scheduler.py
Archive/engine-packages/dana-engine/src/dana_engine/model/: config.py  moe_layer.py  qwen_adapter.py
Archive/engine-packages/dana-engine/src/dana_engine/speculative/: self_draft_runner.py
Archive/engine-packages/dana-engine/tests/: test_integration_benchmark.py
Archive/engine-packages/tiered-tensor-store/: pyproject.toml
Archive/engine-packages/tiered-tensor-store/src/tiered_tensor_store/: mmap_pool.py  promoter.py  ssd_direct.py
Archive/notebooks/: dana_collab.ipynb
Archive/platform/: .env.example  pyproject.toml
Archive/strategy/: PHASE_1_QWEN35_orig.md  PHASE_2_TARGETS_orig.md
backlog/: config.yml
backlog/docs/: doc-1 - Dana-Engine-—-Build-Overview-archived.md  doc-10 - Kimi-K2.5-1T-Deployment-Strategy-archived.md  doc-11 - Persian-Finetuning-Datasets-archived.md  doc-12 - Phase-1-Hardware-Clustering-Deep-Dive-archived.md  doc-13 - Project-Blueprint-—-Qwen3.5-400B-Local-Inference-MVP-archived.md  doc-14 - Platform-TODO-archived.md  doc-15 - UX-Redesign-Plan-archived.md  doc-2 - Dana-Engine-—-Next-Steps-archived.md  doc-3 - GPU-TODO-Checklist-archived.md  doc-4 - The-Asymmetric-AI-Roadmap-archived.md  doc-5 - Groq-Lite-MoE-Engine-—-Strategy-Business-Models-archived.md  doc-6 - Engine-docs-README-archived.md  doc-7 - Daneshbonyan-Status-Matrix-archived.md  doc-8 - Daneshbonyan-Eligibility-AI-Guide-archived.md  doc-9 - Platform-Implementation-Plan-archived.md
docs/engine/: README.md
engine/: ENGINE_OVERVIEW.md  GPU_TODO.md
engine/dana-test-fixtures/: pyproject.toml
engine/dana-test-fixtures/src/dana_engine/model/: __init__.py  attention.py  transformer.py
engine/expert-cache/: LICENSE  pyproject.toml
engine/expert-cache/src/expert_cache/: __init__.py  analytics.py  frequency_cache.py  lru_cache.py  predictive_cache.py
engine/moe-quant/: pyproject.toml
engine/moe-quant/src/moe_quant/: __init__.py  dequantize.py  dynamic.py  quantize.py  sensitivity.py  tier_assigner.py  vllm_plugin.py
engine/moe-quant/tests/: test_quantize.py
engine/moe-router-predict/: pyproject.toml
engine/moe-router-predict/src/moe_router_predict/: __init__.py  async_loader.py  predictor.py  residency.py  scheduler.py  vllm_plugin.py
engine/moe-router-predict/tests/: test_predictor.py
engine/moe-self-draft/: LICENSE  pyproject.toml
engine/moe-self-draft/src/moe_self_draft/: __init__.py  logit_extractor.py  self_draft.py  verify.py  vllm_plugin.py
engine/moe-self-draft/tests/: test_moe_self_draft.py
platform/: .gitignore.example
platform/services/api-gateway/: pyproject.toml
platform/services/api-gateway/src/middleware/: request_logger.py
platform/services/api-gateway/src/routes/: v1_chat.py  v1_models.py
platform/services/api-gateway/src/websocket/: stream.py
platform/services/finetuning-service/: pyproject.toml
platform/services/finetuning-service/src/: main.py
platform/services/finetuning-service/src/evaluation/: evaluator.py
platform/services/finetuning-service/src/training/: data_validator.py  trainer.py
platform/services/inference-gateway/: pyproject.toml
platform/services/inference-gateway/src/inference_gateway/: main.py
platform/services/inference-gateway/src/inference_gateway/adapters/: dana_engine.py  mock.py  sglang.py
platform/services/sglang-worker/: pyproject.toml
platform/services/sglang-worker/src/engine/: batch_scheduler.py
platform/services/sglang-worker/src/evaluation/: benchmark_runner.py
platform/services/sglang-worker/src/optimization/: expert_offload.py
reports/: 2026-05-26_session.md  m1_pillar_benchmark.md  quant_roundtrip.csv  spec_decode_synth.md  vllm_hook_points.md
scripts/: finetune.sh  p1_benchmark.py  p1_d1_baseline.sh  p1_d2_quant_roundtrip.py  p1_d3_spec_decode_synth.py  seed-project-board.py  setup-dev.sh  setup-server.sh
services/analytics-service/: pyproject.toml
services/analytics-service/src/: main.py
services/analytics-service/src/analytics_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/analytics-service/src/pipelines/: cost_analyzer.py
services/analytics-service/src/reports/: dashboard_api.py
services/analytics-service/src/sinks/: clickhouse_sink.py
services/auth-service/: Dockerfile  pyproject.toml
services/auth-service/src/: main.py
services/auth-service/src/crypto/: key_rotation.py
services/auth-service/src/dana_auth_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/auth-service/src/db/: models.py  repository.py
services/auth-service/src/routes/: api_keys.py  login.py  profile.py
services/auth-service/tests/: test_auth_service.py
services/billing-service/: Dockerfile  pyproject.toml
services/billing-service/src/: main.py
services/billing-service/src/billing_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/billing-service/src/metering/: quota_manager.py  token_counter.py  usage_aggregator.py
services/billing-service/src/payment/: gateway.py
services/model-registry/: Dockerfile  pyproject.toml
services/model-registry/src/: main.py
services/model-registry/src/model_registry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
services/model-registry/src/registry/: ab_testing.py  health_checker.py
(+181 files in other folders)
