[project]
name = "dana"
version = "0.1.0"
description = "Dana AI API Platform - Frontier AI on Iranian Infrastructure"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "N802", "E741"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_subclassing_any = false
disallow_untyped_decorators = false
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["packages", "services"]
asyncio_mode = "auto"
