[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analytics-service"
version = "0.1.0"
description = "Dana analytics, anomaly detection, and cost attribution service"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "aio-pika>=9.4.0",
    "redis>=5.0.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "dana-common",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
