[project]
name = "dana-engine"
version = "0.1.0"
description = "Dana: custom MoE inference engine — private integrator composing all six optimization libraries"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "tiered-tensor-store>=0.1.0",
    "expert-cache>=0.1.0",
    "moe-router-predict>=0.1.0",
    "moe-quant>=0.1.0",
    "spec-decode-tree>=0.1.0",
    "moe-self-draft>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
dana = "dana_engine.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
