[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-gateway"
version = "0.1.0"
description = "Engine-agnostic inference gateway. Switch engines via ENGINE env var."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "inference-interface",    # the contract package
]

[tool.hatch.build.targets.wheel]
packages = ["src/inference_gateway"]
