[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dana-inference-worker"
version = "0.1.0"
description = "Dana inference-worker service - core AI module for model inference with speculative decoding, MoE offloading, and KV cache management"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "aio-pika>=9.4,<10",
    "redis>=5.2,<6",
    "numpy>=1.26,<2",
    "dana-common",
]

[project.optional-dependencies]
test = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.27,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
